@@ -8,6 +8,11 @@
 	  Added new function world_get_single_object_bounds to calculate
 	  the bounds of a single object, and make world_get_complex_bounds
 	  call it.
+
+	* include/prototype.h, src/g_smob.c:
+	  Added new scheme function get-attrib-angle. It returns the angle
+	  of the given attribute.
+	  Also made a minor fix to the documentation of g_get_attrib_bounds.
 	
 2006-12-04 Ales Hvezda   <ahvezda@geda.seul.org>
 
